update(artnoi.com): style.css and HTML header/footer

--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="artnoi, Prem Phansuriyanon">
-	<meta name="author" content="@artnoi">
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="/style.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Artnoi.com</title>
-</head>
-<body>
-	<ul class="navbar">
-		<li><a href="/"><img src="/toplogo.png" alt="" title="Artnoi.com" class="logo">artnoi</a></li>
-		<li class="f-right"><a href="/cheat/">cheat</a></li>
-		<li class="f-right"><a href="/blog/">blog</a></li>
-		<li class="f-right"><a href="/about/">about</a></li>
-	</ul>
+
+  <head>
+    <title>Artnoi.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="artnoi, Prem Phansuriyanon">
+    <meta name="author" content="@artnoi">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css">
+  </head>
+
+  <body>
+    <ul class="navbar">
+      <li><a href="/"><img src="/toplogo.png" alt="" title="Artnoi.com" class="logo">artnoi</a></li>
+      <li class="f-right"><a href="/cheat/">cheat</a></li>
+      <li class="f-right"><a href="/blog/">blog</a></li>
+      <li class="f-right"><a href="/about/">about</a></li>
+    </ul>
