fix: nest tag `footer` inside `body` instead of `html`

--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  <head>
-    <title>Artnoi.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="artnoi, Prem Phansuriyanon">
-    <meta name="author" content="@artnoi">
-    <meta charset="UTF-8">
-    <link href="https://artnoi.com/style.css" rel="stylesheet">
-  </head>
+<head>
+  <title>Artnoi.com</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="artnoi, Prem Phansuriyanon">
+  <meta name="author" content="@artnoi">
+  <meta charset="UTF-8">
+  <link href="https://artnoi.com/style.css" rel="stylesheet">
+</head>
 
-  <body>
-    <ul class="navbar">
-      <li><a href="/"><img src="/toplogo.png" alt="" title="Artnoi.com" class="logo">artnoi</a></li>
-      <li class="f-right"><a href="/cheat/">cheat</a></li>
-      <li class="f-right"><a href="/blog/">blog</a></li>
-      <li class="f-right"><a href="/about/">about</a></li>
-    </ul>
+<body>
+  <ul class="navbar">
+    <li><a href="/"><img src="/toplogo.png" alt="Artnoi.com" class="logo">artnoi</a></li>
+    <li class="f-right"><a href="/cheat/">cheat</a></li>
+    <li class="f-right"><a href="/blog/">blog</a></li>
+    <li class="f-right"><a href="/about/">about</a></li>
+  </ul>
