--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="artnoi, Prem Phansuriyanon">
   <meta name="author" content="@artnoi">
   <meta charset="UTF-8">
-  <link href="https://artnoi.com/style.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
 </head>
 
 <body>
