--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -14,6 +14,6 @@
   <ul class="navbar">
     <li><a href="/"><img src="/toplogo.png" alt="Artnoi.com" class="logo">artnoi</a></li>
     <li class="f-right"><a href="/cheat/">cheat</a></li>
-    <li class="f-right"><a href="https://notes.artnoi.com">notes</a></li>
+    <li class="f-right"><a href="https://notes.artnoi.com/#/all-pages">notes</a></li>
     <li class="f-right"><a href="/blog/">blog</a></li>
   </ul>
