update(artnoi.com): header uses from-h1 tag

--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Artnoi.com</title>
+  <title>{{from-h1}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="artnoi, Prem Phansuriyanon">
   <meta name="author" content="@artnoi">
