--- a/artnoi.com/resc/_footer.html
+++ b/artnoi.com/resc/_footer.html
@@ -2,7 +2,7 @@
 <p><a href="#top">Back to top</a></p>
 <hr>
 <footer>
-	<p>Copyright (c) 2019 - 2023 Prem Phansuriyanon</p>
+	<p>Copyright (c) 2019 Prem Phansuriyanon</p>
 	<p>Verbatim copying and redistribution of this entire page are permitted provided this notice is preserved</p>
 </footer>
 </body>
