fix(header): sticky navbar

--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -8,10 +8,11 @@
   <meta name="author" content="@artnoi">
   <meta charset="UTF-8">
   <link href="/style.css" rel="stylesheet">
+  <script src="/script.js"></script>
 </head>
 
 <body>
-  <ul class="navbar">
+  <ul class="navbar" id="navbar">
     <li><a href="/"><img src="/toplogo.png" alt="Artnoi.com" class="logo">artnoi</a></li>
     <li class="f-right"><a href="/cheat/">cheat</a></li>
     <li class="f-right"><a href="https://notes.artnoi.com/#/all-pages">notes</a></li>
