update(artnoi.com): header

--- a/artnoi.com/resc/_header.html
+++ b/artnoi.com/resc/_header.html
@@ -14,7 +14,7 @@
 <body>
   <ul class="navbar" id="navbar">
     <li><a href="/"><img src="/toplogo.png" alt="Artnoi.com" class="logo">artnoi</a></li>
+    <li class="f-right"><a href="https://notes.artnoi.com/#/all-pages">logseq</a></li>
     <li class="f-right"><a href="/cheat/">cheat</a></li>
-    <li class="f-right"><a href="https://notes.artnoi.com/#/all-pages">notes</a></li>
     <li class="f-right"><a href="/blog/">blog</a></li>
   </ul>
